Support ESM UI plugins and themes (#10213)
